fix: UI inconsistencies

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -15,7 +15,7 @@
 }
 
 .login-container .login-form {
-    margin: 20% 0;
+    margin: 20% -10%;
 }
 
 .login-container .login-form .input-group-text {
