--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -15,7 +15,7 @@
 }
 
 .register-container .register-form {
-    margin: 10% 0;
+    margin: 10% -10%;
 }
 
 .register-container .register-form .input-group-text {
