--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -33,7 +33,7 @@
     justify-content: center;
 }
 
-.login-container .login-form-input .formBasicEmail {
+.login-container .login-form-input .formBasicUsername {
     text-align: left;
 }
 
