--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -34,7 +34,7 @@
 }
 
 
-.register-container .register-form-input .formBasicEmail {
+.register-container .register-form-input .formBasicUsername {
     text-align: left;
 }
 
