--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,92 +1,102 @@
 .register {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .register-container .register-form-title h1 {
-  color: #fff;
-  font-size: 3rem;
-  font-weight: 600;
-  font-family: 'Roboto', sans-serif;
+    color: #fff;
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
 }
 
 .register-container .input-group-text {
-  background-color: #0c0b0b;
-  border: 2px solid #fff;
-  color: #fff;
+    background-color: #0c0b0b;
+    border: 2px solid #fff;
+    color: #fff;
 }
 
 .register-container .register-form-title {
-  color: #fff;
-  font-size: 2.5rem;
-  font-weight: 100;
-  font-family: 'Roboto', sans-serif;
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: 100;
+    font-family: 'Roboto', sans-serif;
 }
 
 .register-container .register-form-input,
 .register-container .register-form-signup {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.register .register-container {
+    width: 30%;
+}
+
+@media screen and (max-width: 1300px) {
+    .register .register-container {
+        width: 90%;
+    }
 }
 
 .register-container .register-form-input .formBasicUsername {
-  text-align: left;
+    text-align: left;
 }
 
 .register-container .register-form-input .formBasicPassword {
-  margin: 5% 0;
-  text-align: left;
+    margin: 5% 0;
+    text-align: left;
 }
 
 .register-container .register-form-input .forgot-password a {
-  float: right;
-  color: #fff;
-  font-size: 0.9rem;
-  text-decoration: none;
+    float: right;
+    color: #fff;
+    font-size: 0.9rem;
+    text-decoration: none;
 }
 
 .register-container .register-form-input button {
-  margin-top: 7%;
-  height: 40px;
-  width: 50%;
-  background-color: #1a8cd8;
-  font-weight: 600;
-  margin-left: 25%;
-  margin-right: 25%;
+    margin-top: 7%;
+    height: 40px;
+    width: 50%;
+    background-color: #1a8cd8;
+    font-weight: 600;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 .register-container .register-form-input button:hover {
-  background-color: #045dc1;
-  color: #fff;
+    background-color: #045dc1;
+    color: #fff;
 }
 
 .register-container .register-form-signup {
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 100;
-  font-family: 'Roboto', sans-serif;
-  text-align: left;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 100;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
 }
 
 .register-container .register-form-signup .signup-text p {
-  color: #fff;
-  font-size: 0.9rem;
-  font-weight: 100;
-  font-family: 'Roboto', sans-serif;
-  text-align: left;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 100;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
 }
 
 .register-container .register-form-signup .signup-link p {
-  color: #3ac887;
-  font-size: 0.9rem;
-  font-weight: 600;
-  font-family: 'Roboto', sans-serif;
-  text-decoration: none;
-  text-align: right;
-  cursor: pointer;
+    color: #3ac887;
+    font-size: 0.9rem;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    text-align: right;
+    cursor: pointer;
 }
