--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -8,8 +8,10 @@
   z-index: 999;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   text-align: center;
 }
+
 
 #basic-navbar-nav {
   width: 100%;
@@ -38,6 +40,7 @@
 .sidelogo {
   width: 35%;
   padding-top: 25%;
+  margin: 12%;
   display: inline-block; /* center the element horizontally */
 }
 
@@ -51,4 +54,21 @@
   background-color: #09b14f;
   margin-bottom: 10%;
   border-radius: 15%;
+}
+
+.btn-outline-primary {
+	--bs-btn-color: #09b14f;
+	--bs-btn-border-color: #09b14f;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #09b14f;
+	--bs-btn-hover-border-color: #09b14f;
+	--bs-btn-focus-shadow-rgb: 13,110,253;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #09b14f;
+	--bs-btn-active-border-color: #09b14f;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #09b14f;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #09b14f;
+	--bs-gradient: none;
 }
