--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -12,6 +12,12 @@
   text-align: center;
 }
 
+.sidebar-top {
+  height: 12.5%;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 
 #basic-navbar-nav {
   width: 100%;
@@ -41,7 +47,11 @@
   width: 35%;
   padding-top: 25%;
   margin: 12%;
-  display: inline-block; /* center the element horizontally */
+  display: inline-block;
+}
+
+.sidebar-top .sidelogo {
+  height: 80%;
 }
 
 .admin-button {
@@ -57,18 +67,18 @@
 }
 
 .btn-outline-primary {
-	--bs-btn-color: #09b14f;
-	--bs-btn-border-color: #09b14f;
-	--bs-btn-hover-color: #fff;
-	--bs-btn-hover-bg: #09b14f;
-	--bs-btn-hover-border-color: #09b14f;
-	--bs-btn-focus-shadow-rgb: 13,110,253;
-	--bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #09b14f;
-	--bs-btn-active-border-color: #09b14f;
-	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	--bs-btn-disabled-color: #09b14f;
-	--bs-btn-disabled-bg: transparent;
-	--bs-btn-disabled-border-color: #09b14f;
-	--bs-gradient: none;
+  --bs-btn-color: #09b14f;
+  --bs-btn-border-color: #09b14f;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #09b14f;
+  --bs-btn-hover-border-color: #09b14f;
+  --bs-btn-focus-shadow-rgb: 13,110,253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #09b14f;
+  --bs-btn-active-border-color: #09b14f;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #09b14f;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #09b14f;
+  --bs-gradient: none;
 }
