--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -1,3 +1,4 @@
+/*SIDEBAR*/
 .sidebar {
   background-color: #101010;
   height: 100%;
@@ -8,20 +9,7 @@
   z-index: 999;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   text-align: center;
-}
-
-.sidebar-top {
-  height: 12.5%;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-#basic-navbar-nav {
-  width: 100%;
-  margin-left: 10%;
 }
 
 .sidebar .nav-link {
@@ -29,29 +17,49 @@
   font-size: 1.6vw;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   padding: 16px;
-  width: 100%;
   gap: 20px;
 }
 
-.sidebar .nav-link.active {
-  background-color: #2a2a2a;
+.sidebar .nav-links {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.sidebar .navbar-toggler {
-  border-color: #fff;
+.navbar-brand {
+  margin: 5%;
+  width: 100%;
+  height: 15%;
 }
 
 .sidelogo {
   width: 35%;
-  padding-top: 25%;
-  margin: 12%;
   display: inline-block;
 }
 
+/*NAVBAR*/
+.sidebar-top {
+  height: 75px;
+  width: 100%;
+  flex-direction: row;
+}
+
+.sidebar-top .nav-links {
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.sidebar-top .navbar-brand {
+  height: 100%;
+  width: 10%;
+}
+
 .sidebar-top .sidelogo {
-  height: 80%;
+  width: unset;
+  height: 100%;
 }
 
 .admin-button {
