--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -1,3 +1,7 @@
+.profile {
+    background-color: #0C0B0B;
+}
+
 .profile-container {
     display: flex;
     flex-direction: column;
@@ -7,13 +11,141 @@
     height: 100%;
     background-color: #090808;
     padding: 2px;
-    border-radius: 30px;
+    border-radius: 30px 30px 0 0;;
 }
 
 .profile-border {
     background: linear-gradient(90deg, #32AC74 0%, #1A8CD8 100%);
     padding: 1px;
-    border-radius: 30px;
-    max-width: 700px;
+    border-radius: 30px 30px 0 0;
+    max-width: 1100px;
 }
+
+.profile-info {
+    position: relative;
+    width: 100%;
+}
+
+.profile-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 2px;
+    border-radius: 30px;
+}
+
+.profile-image img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    margin: 10px;
+}
+
+.profile-name {
+    text-align: center;
+}
+
+.profile-name h1 {
+    padding: 20px;
+    font-size: 2.25rem;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+.profile-follow-stats {
+    display: flex;
+    justify-content: center;
+}
+
+.profile-follow-stats .row .col{
+    text-align: center;
+    border-radius: 30px;
+}
+
+.profile-follow-stats .row .col p, .profile-follow-stats .row .col h3 {
+    font-size: 1.5rem;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.profile-links {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+}
+
+.profile-links .profile-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #090808;
+    padding: 2px;
+    border-radius: 50%;
+    margin: 5px;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.profile-links .profile-link:hover {
+    transition: all 0.2s ease-in-out;
+    opacity: 0.8;
+}
+
+.profile-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 20px;
+    position: relative;
+    bottom: -28px;
+}
+
+.profile-buttons .profile-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .profile-buttons .profile-button {
+        width: 40%;
+    }
+}
+
+.profile-buttons .profile-button.follow {
+    background-color: #32AC74;
+    border-radius: 30px 0 0 30px;
+}
+
+.profile-buttons .profile-button.follow:hover {
+    transition: all 0.2s ease-in-out;
+    background-color: #00cc99;
+}
+
+
+.profile-buttons .profile-button.share {
+    background-color: #1A8CD8;
+    border-radius: 0 30px 30px 0;
+}
+
+.profile-buttons .profile-button.share:hover {
+    transition: all 0.2s ease-in-out;
+    background-color: #0099ff;
+}
+
 
