--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -1,7 +1,9 @@
+
 .profile {
     background-color: #0C0B0B;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: 50px auto;
+    padding: 0 5px;
 }
 
 .profile-container {
@@ -148,6 +150,25 @@
 .profile-buttons .profile-button.share:hover {
     transition: all 0.2s ease-in-out;
     background-color: #0099ff;
+}
+
+.profile-post-border {
+    background: linear-gradient(90deg, #32AC74 0%, #1A8CD8 100%);
+    padding: 0 1px 1px 1px;
+    border-radius: 0 0 30px 30px;
+    max-width: 1100px;
+}
+
+.profile-post-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #090808;
+    padding: 50px 2px 50px;
+    border-radius: 0 0 30px 30px;
 }
 
 
