fix: Lint and Prettier fixes

--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -80,7 +80,7 @@
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #09b14f;
   --bs-btn-hover-border-color: #09b14f;
-  --bs-btn-focus-shadow-rgb: 13,110,253;
+  --bs-btn-focus-shadow-rgb: 13, 110, 253;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #09b14f;
   --bs-btn-active-border-color: #09b14f;
