--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -25,7 +25,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
+  padding-bottom: 40%;
+  gap: 2%;
 }
 
 .navbar-brand {
@@ -50,6 +52,7 @@
   width: 100%;
   flex-direction: row;
   justify-content: space-evenly;
+  padding-bottom: unset;
 }
 
 .sidebar-top .navbar-brand {
@@ -71,7 +74,7 @@
   border-color: #09b14f;
   background-color: #09b14f;
   margin-bottom: 10%;
-  border-radius: 15%;
+  border-radius: 15px;
 }
 
 .btn-outline-primary {
