--- a/frontend/src/components/Notifications/Notifications.css
+++ b/frontend/src/components/Notifications/Notifications.css
@@ -1,4 +1,15 @@
-.container {
+.page {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.notifications {
+  display: flex;
+  justify-content: center;
+}
+
+.notificationsbox {
   display: flex;
   flex-direction: column;
   border-style: solid;
@@ -8,7 +19,6 @@
   height: 100vh;
   min-height: 600px;
   padding: 0;
-  margin: 0;
 }
 
 .header {
