--- a/frontend/src/components/Notifications/Notification.css
+++ b/frontend/src/components/Notifications/Notification.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 0;
+  font-size: 1em; /* set font size for the container */
 }
 
 .notification .left {
@@ -13,7 +14,7 @@
   align-items: center;
   gap: 16px;
   margin-left: 35px;
-  font-size: 25px;
+  font-size: 1.3em;
 }
 
 .notification .right {
@@ -22,13 +23,14 @@
   gap: 16px;
   margin-right: 35px;
   height: 100%;
-  font-size: 200%;
+  font-size: 2.5em;
 }
 
 .logo {
   border: 4px solid white;
   border-radius: 100%;
 }
+
 .logo img {
   height: 60px;
 }
