--- a/frontend/src/components/Notifications/Notifications.css
+++ b/frontend/src/components/Notifications/Notifications.css
@@ -4,8 +4,7 @@
   border-style: solid;
   border-color: rgb(45, 153, 104);
   border-radius: 25px;
-  width: 50vw;
-  height: 100vh;
+  width: 60vw;
   min-height: 600px;
   padding: 0;
 }
@@ -16,7 +15,11 @@
   height: 8%;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 2vw;
+  font-size: 200%;
   border-bottom: solid;
   border-color: rgb(45, 153, 104);
+}
+
+.notificationsbox .notification:last-of-type {
+  border-radius: 0px 0px 25px 25px; /*Round bottom edges of last notification to match container*/
 }
