--- a/frontend/src/components/Notifications/Notifications.css
+++ b/frontend/src/components/Notifications/Notifications.css
@@ -4,15 +4,15 @@
   border-style: solid;
   border-color: rgb(45, 153, 104);
   border-radius: 25px;
-  width: 60vw;
-  min-height: 600px;
+  width: 55vw;
+  min-height: 90vh;
   padding: 0;
 }
 
 .header {
   display: flex;
   width: 100%;
-  height: 8%;
+  min-height: 8vh;
   justify-content: space-evenly;
   align-items: center;
   font-size: 200%;
