--- a/frontend/src/components/Post/Post.css
+++ b/frontend/src/components/Post/Post.css
@@ -2,7 +2,7 @@
   position: relative;
   background: linear-gradient(90deg, #32ac74 0%, #1a8cd8 100%);
   border-radius: 30px;
-  width: 100%;
+  width: 700px;
   max-width: 800px;
   padding: 2px;
   margin: 20px auto;
