--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -1,138 +1,139 @@
 /*SIDEBAR*/
 .sidebar {
-    background-color: #101010;
-    height: 100%;
-    width: 17.5%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+  background-color: #101010;
+  height: 100%;
+  width: 17.5%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .sidebar .nav-link {
-    color: #fff;
-    font-size: 1.2vw;
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    gap: 20px;
+  color: #fff;
+  font-size: 1.2vw;
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  gap: 20px;
 }
 
 .sidebar .search-bar {
-    width: 80%;
-    margin: 15%;
-    border-radius: 15px;
-    border-color: #09b14f;
-    background-color: #414141;
-    padding: 5px;
-    color: #fff;
+  width: 80%;
+  margin: 15%;
+  border-radius: 15px;
+  border-color: #09b14f;
+  background-color: #414141;
+  padding: 5px;
+  color: #fff;
 }
 
 .sidebar .search-bar a .rbt-highlight-text {
-    color: black;
-    font-weight: 600;
-    padding: 0;
+  color: black;
+  font-weight: 600;
+  padding: 0;
 }
 
 .sidebar .search-bar input {
-    width: 100%;
-    border: none;
-    background-color: #414141;
-    color: #fff;
+  width: 100%;
+  border: none;
+  background-color: #414141;
+  color: #fff;
 }
 
-.sidebar .search-bar input:focus, .sidebar .search-bar input:active {
-    outline: none;
-    box-shadow: none;
+.sidebar .search-bar input:focus,
+.sidebar .search-bar input:active {
+  outline: none;
+  box-shadow: none;
 }
 
 .sidebar .search-bar button {
-    border: none;
-    border-radius: 15px;
-    color: #fff;
+  border: none;
+  border-radius: 15px;
+  color: #fff;
 }
 
 .sidebar .nav-links {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-bottom: 40%;
-    gap: 2%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 40%;
+  gap: 2%;
 }
 
 .sidebar .navbar-brand {
-    margin: 5%;
-    width: 100%;
-    height: 15%;
+  margin: 5%;
+  width: 100%;
+  height: 15%;
 }
 
 .sidebar .sidelogo {
-    width: 35%;
-    display: inline-block;
+  width: 35%;
+  display: inline-block;
 }
 
 .sidebar .admin-button {
-    font-size: 1.2vw;
-    font-weight: 510;
-    margin-bottom: 10%;
-    width: 80%;
+  font-size: 1.2vw;
+  font-weight: 510;
+  margin-bottom: 10%;
+  width: 80%;
 }
 
 /*NAVBAR*/
 .top-navbar {
-    display: flex;
-    flex-direction: row;
-    background-color: #101010;
+  display: flex;
+  flex-direction: row;
+  background-color: #101010;
 }
 
 #basic-navbar-nav {
-    text-align: center;
-    padding-right: 5%;
+  text-align: center;
+  padding-right: 5%;
 }
 
 .top-navbar .navbar-nav {
-    display: inline-block;
+  display: inline-block;
 }
 
 .top-navbar .navbar-brand {
-    height: 100%;
-    width: 13%;
+  height: 100%;
+  width: 13%;
 }
 
 .top-navbar .sidelogo {
-    width: 100%;
-    display: inline-block;
-    padding-top: 10px;
+  width: 100%;
+  display: inline-block;
+  padding-top: 10px;
 }
 
 .top-navbar .nav-link {
-    color: #fff;
-    font-size: 2vw;
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    gap: 20px;
+  color: #fff;
+  font-size: 2vw;
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  gap: 20px;
 }
 
 .navbar-toggler-icon {
-    color: #09b14f;
+  color: #09b14f;
 }
 
 .top-navbar .admin-button {
-    font-size: 2vw;
-    font-weight: 510;
-    font-family: 'Roboto', sans-serif;
-    width: 20%;
-    border-color: #09b14f;
-    background-color: #09b14f;
-    border-radius: 15px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin-bottom: 4%;
-    margin-right: 4%;
+  font-size: 2vw;
+  font-weight: 510;
+  font-family: 'Roboto', sans-serif;
+  width: 20%;
+  border-color: #09b14f;
+  background-color: #09b14f;
+  border-radius: 15px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 4%;
+  margin-right: 4%;
 }
