Admin: Working. Disabling API protection needs a server restart. Admin portal prompts for basic auth for all admin tasks. TODO: Need to fix this.

--- a/api/templates/admin/index.html
+++ b/api/templates/admin/index.html
@@ -17,5 +17,12 @@
     Use this to Add/Modify/Delete registered connections to bigger yoshi. Can perform batch actions similar to above.
     </p>
 </li>
+<li>
+    <a href="/admin/settings">Settings</a>
+    <p>
+    Additional admin tasks for global configuration.
+    </p>
+</li>
+
 </ul>
 {% endblock %}
