--- a/api/templates/settings.html
+++ b/api/templates/settings.html
@@ -4,30 +4,12 @@
 
 {% endblock %}
 
-{% block script %}
-<script>
-
-    function changeLimit() {
-        const limitField = document.querySelector("#node-limit");
-        const val = limitField.value;
-        let url = {{ url_for("settings.index") }};
-        url += "node-limit/" + val;
-        $.ajax({
-            url: url,
-            type: "POST"
-        });
-    }
-</script>
-{{ super() }}
-{% endblock %}
 
 {% block body %}
-
-{{ super() }}
-
+   <div class="input-group">
 
 <h3>
-    Enable or disable API-protection
+    API Basic Auth protection
     <input type="checkbox" id="api-auth" name="API" value="API-protection" style="display: inline;">
 </h3>
 
@@ -41,8 +23,68 @@
 </h3>
 <h3>
     Maximum node connection limit
-    <input type="number" id="node-limit" name="Node-limit" value="Node-limit" style="display: inline;">
+    <input type="number" id="node-limit" name="Node-limit" min="0" style="display: inline;">
 </h3>
 
-<input type="submit" name="button" value="button" onClick="changeLimit();">
+<input class="btn-success btn-md" type="button" name="button" onClick="sendConfig();" value="Save Changes" style="left: 50%;position:absolute;">
+   </div>
+
+   <script type="text/javascript">
+
+    const limitField = document.querySelector("#node-limit");
+    const protectAPI = document.querySelector("#api-auth");
+    const auto_auth = document.querySelector("#auto-auth");
+    const auto_node = document.querySelector("#auto-connect");
+
+    limitField.value = {{ APIConfig.NODE_LIMIT }}
+    if ("{{ APIConfig.AUTHOR_AUTO_APPROVE }}" == "True") {
+        auto_auth.checked = true;
+
+    }
+    if ("{{ APIConfig.NODE_AUTO_APPROVE }}" == "True") {
+        auto_node.checked = true;
+
+    }
+    if ("{{ APIConfig.IS_API_PROTECTED }}" == "True") {
+        protectAPI.checked = true;
+
+    }
+
+function sendConfig() {
+    let url = "/admin/action/config";
+
+    const data = {};
+    if (limitField.value !== null) {
+        data['Node-limit'] = limitField.value;
+    }
+
+    if (protectAPI.checked) {
+        data['API'] = true;
+    }
+
+    if (auto_auth.checked) {
+        data['Approve-authors'] = true;
+    }
+
+    if (auto_node.checked) {
+        data['Approve-nodes'] = true;
+    }
+    console.log(data);
+
+    $.ajax({
+        url: url,
+        type: "POST",
+        dataType: "json",
+        data: data,
+        success: (response) => {
+            window.alert(response.message);
+        }
+    });
+}
+</script>
+
+{{ super() }}
+
+
+
 {% endblock %}
