--- a/api/templates/settings.html
+++ b/api/templates/settings.html
@@ -8,23 +8,23 @@
 {% block body %}
    <div class="input-group">
 
-<h3>
+<h5>
     API Basic Auth protection
     <input type="checkbox" id="api-auth" name="API" value="API-protection" style="display: inline;">
-</h3>
+</h5>
 
-<h3>
+<h5>
     Auto approve authors
     <input type="checkbox" id="auto-auth" name="Approve-authors" value="Approve-authors" style="display: inline;">
-</h3>
-<h3>
+</h5>
+<h5>
     Auto approve connection requests
     <input type="checkbox" id="auto-connect" name="Approve-nodes" value="Approve-nodes" style="display: inline;">
-</h3>
-<h3>
+</h5>
+<h5>
     Maximum node connection limit
-    <input type="number" id="node-limit" name="Node-limit" min="0" style="display: inline;">
-</h3>
+    <input class="form-control" type="number" id="node-limit" name="Node-limit" min="0" style="display: inline; color:black;">
+</h5>
 
 <input class="btn-success btn-md" type="button" name="button" onClick="sendConfig();" value="Save Changes" style="left: 50%;position:absolute;">
    </div>
