Admin: Solves all previous issues. Own clients no longer need basic auth.

--- a/api/templates/settings.html
+++ b/api/templates/settings.html
@@ -23,10 +23,10 @@
 </h5>
 <h5>
     Maximum node connection limit
-    <input class="form-control" type="number" id="node-limit" name="Node-limit" min="0" style="display: inline; color:black;">
+    <input type="number" id="node-limit" name="Node-limit" min="0" style="display: inline; color:black;">
 </h5>
 
-<input class="btn-success btn-md" type="button" name="button" onClick="sendConfig();" value="Save Changes" style="left: 50%;position:absolute;">
+<input class="btn-md" type="button" name="button" onClick="sendConfig();" value="Save Changes" style="left: 50%;position:absolute;">
    </div>
 
    <script type="text/javascript">
