--- a/frontend/src/components/Post/CreatePost.css
+++ b/frontend/src/components/Post/CreatePost.css
@@ -128,3 +128,10 @@
   width: 150px;
   margin: 1rem 1rem 0 0;
 }
+
+.create-post .post-content-image-preview {
+  display: block;
+  margin: 20px auto;
+  max-width: 100%;
+  max-height: 500px;
+}
