--- a/frontend/src/components/Comments/Comments.css
+++ b/frontend/src/components/Comments/Comments.css
@@ -1,69 +1,75 @@
 .container {
-  background-color: #eef2f5;
-  width: 400px;
+    background-color: #eef2f5;
+    width: 500px;
 }
 
-.addtxt {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-  font-size: 13px;
-  width: 350px;
-  background-color: #e5e8ed;
-  font-weight: 500;
+.container-input {
+    margin: 0 0 50px 0;
 }
 
-.form-control:focus {
-  color: #000;
+.input {
+    color: #000;
+    width: 150px;
+    padding: 10px 0 10px 40px;
+    border-radius: 20px;
+    border: solid 1px #333;
+    transition: all .2s ease-in-out;
+    outline: none;
+    opacity: 0.5;
 }
 
-.second {
-  width: 350px;
-  background-color: white;
-  border-radius: 4px;
-  box-shadow: 10px 10px 5px #aaaaaa;
+.input:focus {
+    opacity: 1;
+    width: 500px;
+    border-radius: 10px;
 }
 
-.text1 {
-  font-size: 13px;
-  font-weight: 500;
-  color: #56575b;
+
+.post-content-text textarea,
+.post-content-text .post-content-markdown-preview {
+    width: 500px;
+    height: 100px;
+    background: none;
+    /* Remove the default border */
+    margin: 1rem 0;
+    border: none;
+    border-top: 1px solid white;
+    padding: 1rem 0;
+    font-size: 1rem;
+    font-weight: normal;
 }
 
-.text2 {
-  font-size: 13px;
-  font-weight: 500;
-  margin-left: 6px;
-  color: #56575b;
+/* Remove the default border when the textarea is focused */
+.post-content-text textarea:focus {
+    outline: none;
 }
 
-.text3 {
-  font-size: 13px;
-  font-weight: 500;
-  margin-right: 4px;
-  color: #828386;
+.post-actions {
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-.text3o {
-  color: #00a5f4;
+.comment {
+    width: 500px;
+    margin: 0 0 40px 0;
+    color: #000;
+    border-bottom: solid 1px #333;
+    padding: 0 0 20px 0;
 }
 
-.text4 {
-  font-size: 13px;
-  font-weight: 500;
-  color: #828386;
+.comment img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 0 10px 0 0;
 }
 
-.text4i {
-  color: #00a5f4;
+.comment .author {
+    font-weight: bold;
 }
 
-.text4o {
-  color: white;
-}
-
-.thumbup {
-  font-size: 13px;
-  font-weight: 500;
-  margin-right: 5px;
+.comment .time {
+    font-size: 0.8rem;
+    color: #999;
+    margin: 0 0 0 10px;
 }
