ft: cleanup API, distinguish outbound/inbound connections, redirect unauthorized settings to login page

--- a/api/templates/admin/index.html
+++ b/api/templates/admin/index.html
@@ -42,7 +42,7 @@
     function login() {
         const username = document.querySelector("#username").value;
         const password = document.querySelector("#password").value;
-        const url = "/admin/action/login";
+        const url = "{{ admin_endpoint }}/login";
         $.ajax({
             url: url,
             type: "POST",
