--- a/frontend/src/components/Comments/Comments.css
+++ b/frontend/src/components/Comments/Comments.css
@@ -7,7 +7,7 @@
   margin: 0 0 50px 0;
 }
 
-.input {
+.comments .input {
   color: #000;
   width: 150px;
   padding: 10px 0 10px 40px;
@@ -18,7 +18,7 @@
   opacity: 0.5;
 }
 
-.input:focus {
+.comments .input:focus {
   opacity: 1;
   width: 500px;
   border-radius: 10px;
