--- a/frontend/src/components/Post/CreatePost.css
+++ b/frontend/src/components/Post/CreatePost.css
@@ -42,7 +42,7 @@
   background: none;
   padding: 1rem;
   font-size: 1.2rem;
-  color: #f5f5f5;
+  color: #fff;
   transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -58,7 +58,7 @@
 .create-post .input:focus,
 .input:valid {
   outline: none;
-  border: 2px solid #fff;
+  border: 2px solid #f0f0f0;
 }
 
 .create-post .input:focus ~ label,
