--- a/frontend/src/components/Notifications/Notifications.css
+++ b/frontend/src/components/Notifications/Notifications.css
@@ -20,6 +20,6 @@
   border-color: rgb(45, 153, 104);
 }
 
-.notificationsbox .notification:last-of-type {
-  border-radius: 0px 0px 25px 25px; /*Round bottom edges of last notification to match container*/
+.notificationsbox .notification:first-child {
+  border-radius: 25px 25px 0 0; /*Round bottom edges of last notification to match container*/
 }
