fix: Pre commit

--- a/frontend/src/components/Notifications/Notification.css
+++ b/frontend/src/components/Notifications/Notification.css
@@ -50,12 +50,14 @@ b {
   border-radius: 50%;
 }
 
-.notification .follow-icons .follow-icon.accept:hover, .notification .follow-icons .follow-icon.accept path:hover {
+.notification .follow-icons .follow-icon.accept:hover,
+.notification .follow-icons .follow-icon.accept path:hover {
   color: #0df327;
   cursor: pointer;
 }
 
-.notification .follow-icons .follow-icon.reject:hover, .notification .follow-icons .follow-icon.reject path:hover {
+.notification .follow-icons .follow-icon.reject:hover,
+.notification .follow-icons .follow-icon.reject path:hover {
   color: #f30d0d;
   cursor: pointer;
 }
