--- a/frontend/src/components/Post/CreatePost.css
+++ b/frontend/src/components/Post/CreatePost.css
@@ -135,3 +135,16 @@
   max-width: 100%;
   max-height: 500px;
 }
+
+/*Image drop box*/
+.create-post .post-content-image label {
+  height: 80%;
+  width: 55%;
+  margin: 20px;
+  border-color: #32ac74;
+}
+
+/*Little tiny image next to "Upload"*/
+.create-post .post-content-image svg > path {
+  fill: #32ac74;
+}
