--- a/frontend/src/components/Post/Post.css
+++ b/frontend/src/components/Post/Post.css
@@ -126,6 +126,11 @@
   font-weight: normal;
 }
 
+.post .post-body img {
+  width: 100%;
+  height: 20em;
+}
+
 .post .post-image {
   display: flex;
   justify-content: center;
