--- a/frontend/src/components/Post/Post.css
+++ b/frontend/src/components/Post/Post.css
@@ -127,8 +127,11 @@
 }
 
 .post .post-body img {
-  width: 100%;
-  height: 20em;
+    max-width: 100%;
+    max-height: 30em;
+    width: auto;
+    height: auto;
+    margin: 0 auto;
 }
 
 .post .post-image {
