--- a/frontend/src/components/Post/CreatePost.css
+++ b/frontend/src/components/Post/CreatePost.css
@@ -126,7 +126,7 @@
 
 .create-post .post-submit button {
   width: 150px;
-  margin: 1rem 1rem 0 0;
+  margin: 0 1rem 0 0;
 }
 
 .create-post .post-content-image-preview {
@@ -134,4 +134,43 @@
   margin: 20px auto;
   max-width: 100%;
   max-height: 500px;
+}
+
+.create-post .search-user {
+  float: left;
+}
+
+.create-post .search-user .post-submit-recipient {
+  border: solid 2px #9e9e9e;
+  border-radius: 5px;
+  background: none;
+  font-size: 1.2rem;
+  padding: 1rem 5rem 1rem;
+  color: #fff;
+}
+
+.create-post .search-user {
+  border-radius: 15px;
+  border-color: #09b14f;
+  padding: 5px;
+  color: #fff;
+}
+
+.create-post .search-user a .rbt-highlight-text {
+  color: black;
+  font-weight: 600;
+  padding: 0;
+}
+
+.create-post .search-user input {
+  width: 100%;
+  border: none;
+  background-color: #414141;
+  color: #fff;
+}
+
+.create-post .search-user input:focus,
+.create-post .search-user input:active {
+  outline: none;
+  box-shadow: none;
 }
