--- a/frontend/src/components/Comments/Comments.css
+++ b/frontend/src/components/Comments/Comments.css
@@ -56,6 +56,11 @@
   padding: 0 0 20px 0;
 }
 
+.comment > *:nth-child(2) {
+  flex: 0 0 auto; /* don't allow element to grow or shrink */
+  margin-right: auto; /* push element to the start of the container */
+}
+
 .comment img {
   width: 50px;
   height: 50px;
